--- a/package.json
+++ b/package.json
@@ -9,20 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.4.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@svgr/webpack": "^6.2.1",
+    "@types/es6-shim": "^0.31.42",
+    "@types/moment": "^2.13.0",
+    "@types/pure-render-decorator": "^0.2.28",
+    "@types/react-addons-css-transition-group": "^15.0.7",
+    "cors": "^2.8.5",
+    "grommet": "^2.23.0",
+    "grommet-icons": "^4.7.0",
     "material-ui": "^1.0.0-beta.47",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "^12.1.6",
+    "next-connect": "^0.12.2",
+    "node-fetch": "^3.2.4",
+    "react": "^18.1.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^18.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
