--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.7",
     "cors": "^2.8.5",
+    "fortawesome": "0.0.1-security",
     "grommet": "^2.23.0",
     "grommet-icons": "^4.7.0",
     "material-ui": "^1.0.0-beta.47",
