--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.7",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "fortawesome": "0.0.1-security",
     "grommet": "^2.23.0",
